fixe spacing of view header

--- a/public/master.css
+++ b/public/master.css
@@ -1211,7 +1211,7 @@ input:focus {
   position: fixed;
   bottom: 0px;
 }
-.BudgetDetailViewHeader {
+.ViewHeader {
   height: 17rem;
 }
 .BudgetHeaderProgBarContainer {
