--- a/src/_styles/budgets.styl
+++ b/src/_styles/budgets.styl
@@ -1,6 +1,6 @@
 // BUDGET HEADER
 
-.BudgetDetailViewHeader {
+.ViewHeader {
   height: 17rem; 
 }
 
